# LiteRT-DPM

./: README.md  WORKSPACE
.github/workflows/: ci-build-win.yml
c/: BUILD  engine.cc  engine_test.cc
docs/: litert_lm_builder.md
kotlin/java/com/google/ai/edge/litertlm/: LiteRtLmJni.kt
kotlin/java/com/google/ai/edge/litertlm/jni/: BUILD  litertlm.cc
python/litert_lm/: __init__.py
python/litert_lm_cli/: BUILD  main.py  main_test.py  model.py
runtime/: CMakeLists.txt
runtime/components/: BUILD  model_resources_streaming.cc  model_resources_streaming.h
runtime/components/tool_use/: fc_parser_utils_test.cc
runtime/components/tool_use/antlr/: AntlrFcLexer.g4  AntlrFcParser.g4
runtime/conversation/: conversation.cc  conversation_test.cc
runtime/conversation/model_data_processor/: gemma3_data_processor.h
runtime/core/: BUILD  engine_advanced_impl.cc  engine_impl.cc
runtime/dpm/: BUILD  CMakeLists.txt  PHASE1_AUDIT_RECOVERY.md  PHASE1_STATUS.md  dpm_determinism_e2e_test.cc  dpm_projector.cc  dpm_projector.h  dpm_projector_test.cc  engine_inference_runner.cc  engine_inference_runner.h  engine_inference_runner_test.cc  event.cc  event.h  event_sourced_log.cc  event_sourced_log.h  event_sourced_log_test.cc  projection_prompt.cc  projection_prompt.h  stateless_decision_engine.cc  stateless_decision_engine.h
runtime/dpm/config/: BUILD  CMakeLists.txt  dpm_config_loader.cc  dpm_config_loader.h  dpm_config_loader_test.cc
runtime/engine/: engine_settings.h
runtime/executor/: BUILD  fake_llm_executor.cc  fake_llm_executor.h  llm_executor_base.h  llm_executor_interface.h  llm_litert_compiled_model_executor.cc  llm_litert_mtp_drafter.cc  llm_litert_npu_compiled_model_executor.cc  llm_litert_npu_compiled_model_executor_utils.cc  llm_litert_npu_compiled_model_executor_utils_test.cc  vision_executor_settings.cc  vision_executor_settings.h
runtime/framework/resource_management/: resource_manager.cc  serial_execution_manager.cc  threaded_execution_manager.cc
runtime/platform/: CMakeLists.txt
runtime/platform/checkpoint/: BUILD  checkpoint_cloud_layout.cc  checkpoint_cloud_layout.h  checkpoint_cloud_layout_test.cc
runtime/platform/eventlog/: BUILD  CMakeLists.txt  event_sink.h  posix_event_sink.cc  posix_event_sink.h  posix_event_sink_test.cc
runtime/proto/: BUILD  dpm_config.proto
schema/capabilities/: BUILD
tools/benchmarks/baselines/: dpm_prefill_baselines.json
tools/benchmarks/dpm_prefill_bench/: BUILD  README.md  dpm_prefill_bench.cc
